<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_hint">abc@example.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_label">Login</string>
    <string name="astresisks">********</string>
    <string name="signUp">Sign up</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="welcome">Welcome to our Shoe inventory app. This app is a project for the Udacity Android Development with Kotlin nanodegree</string>
    <string name="goTo_instruction">To go to the app instructions , click on the button below.</string>
    <string name="click_me">Click me!</string>
    <string name="instructions_welcome">Welcome to the instructions the screen. We hope you are enjoying our app so far.</string>
    <string name="goTo_shoe_list">"Click on the button below in order to go to the shoe list screen. "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="shoe_name">Shoe name:</string>
    <string name="company">Company:</string>
    <string name="shoe_size">Shoe size:</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
